# oop-cpp-605-604

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  code_to_pdf.sh  devcontainer.json
Elevators/: CMakeLists.txt  elevators_data_large.csv  elevators_data_small.csv  notes.txt
Elevators/app/: CMakeLists.txt  elevator_sim.cpp
Elevators/docs/: design.plantuml  design2.plantuml  initial-sketch.puml
Elevators/include/: Elevator.hpp  ElevatorStates.hpp  Event.hpp  Floor.hpp  Passenger.hpp  Simulation.hpp  Summary.hpp  Utilities.hpp
Elevators/prototype/: README.md  elevator.py  elevator_states.py  event.py  floor.py  main.py  passenger.py  simulation.py  summary.py  utilities.py
Elevators/src/: CMakeLists.txt  Elevator.cpp  Event.cpp  Floor.cpp  Passenger.cpp  Simulation.cpp  Summary.cpp  Utilities.cpp
Elevators/src/Elevators/cpp/: Elevator.cpp  ElevatorSimulation.cpp
Elevators/src/Elevators/include/: Elevator.hpp  Floor.hpp  Passenger.hpp  PassengerCreationEvent.hpp
ExpressionTree/: CMakeLists.txt
ExpressionTree/docs/: class-diagram.puml  generated-design.plantuml
ExpressionTree/src/ExpressionTree/: CMakeLists.txt
ExpressionTree/src/ExpressionTree/cpp/: Add.cpp  Constant.cpp  Divide.cpp  Leaf.cpp  Multiply.cpp  Node.cpp  Operation.cpp  Subtract.cpp  Tree.cpp  Variable.cpp
ExpressionTree/src/ExpressionTree/include/: Add.h  Constant.h  Divide.h  Leaf.h  Multiply.h  Node.h  Operation.h  Subtract.h  Tree.h  Variable.h
ExpressionTree/src/tests/: AddTests.cpp  CMakeLists.txt  ConstantTests.cpp  NodeTest.cpp  TreeTests.cpp  UnitTestMain.cpp
Poker/: CMakeLists.txt
Poker/cmake/: FindJSONCPP.cmake
Poker/src/: hands.json
Poker/src/Poker/: CMakeLists.txt  Poker.cpp
Poker/src/Poker/cpp/: CPUPlayer.cpp  Card.cpp  Dealer.cpp  Deck.cpp  Hand.cpp  HumanPlayer.cpp  Player.cpp
Poker/src/Poker/include/: CPUPlayer.h  Card.h  CardValue.h  Dealer.h  Deck.h  Hand.h  HumanPlayer.h  Player.h
Poker/src/tests/: CMakeLists.txt  CardValueTests.cpp  DeckTests.cpp  JSONHandTests.cpp
PokerRanking/: CMakeLists.txt  Doxyfile  Makefile  README.md
PokerRanking/docs/: design.puml
PokerRanking/src/: Card.cpp  Card.h  CardTests.cpp  CardValue.h  UnitTestMain.cpp  hands.json  main.cpp
PokerRanking/src/pokerRanking/: CMakeLists.txt  main.cpp
PokerRanking/src/pokerRanking/cpp/: Card.cpp  CardValue.cpp  Hand.cpp
PokerRanking/src/pokerRanking/include/: Card.h  CardValue.h  Hand.h
PokerRanking/src/tests/: CMakeLists.txt  HandTests.cpp  JSONHandTests.cpp  UnitTestMain.cpp
Probability/: CMakeLists.txt
Probability/docs/: design.plantuml
Probability/include/: IndependentEvent.h
Probability/src/: IndependentEvent.cpp  ProbabilityTests.cpp
Statistic/: Doxyfile  Makefile  README.md
Statistic/docs/: design.puml
Statistic/src/: Statistic.cpp  Statistic.h  StatisticTests.cpp  main.cpp
TicTacToe/: Doxyfile  Makefile  README.md
TicTacToe/docs/: design.puml
TicTacToe/src/: Board.cpp  Board.h  TicTacToeDriver.cpp  UnitTestMain.cpp
TriangleTest/: Makefile
TriangleTest/docs/: design.puml
TriangleTest/src/: Triangle.cpp  Triangle.h  Triangle.hpp  TriangleTest.cpp  TriangleType.cpp
